Bug#152970 Fix: Front end>> Text area not aligned properly at front end, in list view its occupy longer area.

--- a/src/components/com_tjucm/media/css/tjucm.css
+++ b/src/components/com_tjucm/media/css/tjucm.css
@@ -7,6 +7,6 @@ margin-left:5px !important;
 width:200px !important;
 }
 
-p.wordwrap-for-long-description{
+p.tj-wordwrap{
 word-break: break-word;
 }
